openapi clean up
